--- a/index.html
+++ b/index.html
@@ -1,70 +1,81 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name='viewport'
-      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-      <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
-      <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
-    <title>Tortoiseshell Optics</title>
-  </head>
-  <body>
-    <div class="maincontainer">
-      <div class="container">
 
-        <div class="banner">
-          <div class="header">
-            <div class="name">
-              <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics logo">
-              <span>Tortoiseshell Optics</span>
-            </div>
-            <div class="nav">
-              <nav>
-                <span>Services</span>
-                <span>Products</span>
-                <span>Contact</span>
-              </nav>
-            </div>
-          </div>
-          <div class="tagline">
-            <h1>Don't just look, See.</h1>
-          </div>
+<head>
+  <meta charset="utf-8">
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+  <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+  <title>Tortoiseshell Optics</title>
+</head>
+
+<body>
+  <div class="maincontainer">
+    <div class="bannercontainer">
+      <div class="header">
+        <div class="name">
+          <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics logo">
+          <span>Tortoiseshell Optics</span>
         </div>
-
-        <div class="offers">
-          <div class="offer1">
-            <img src="./resources/images/paper-icon.png" alt="Paper Icon">
-            <span>Comprehensive Exams</span>
-          </div>
-          <div class="offer2">
-            <img src="./resources/images/ruler-icon.png" alt="Ruler Icon">
-            <span>Custom Fittings</span>
-          </div>
-          <div class="offer3">
-            <img src="./resources/images/truck-icon.png" alt="Truck Icon">
-            <span>Fast Delivery</span>
-          </div>
+        <div class="nav">
+          <nav>
+            <span>Services</span>
+            <span>Products</span>
+            <span>Contact</span>
+          </nav>
         </div>
-
-        <div class="about">
-          <div class="ab1">
-            <h2>Philosophy</h2>
-            <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
-          </div>
-          <div class="ab2">
-            <h2>Appointments</h2>
-            <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
-          </div>
-        </div>
-
-        <footer>
-          <img src="./resources/images/logo-black.png" alt="Tortoiseshell Optics Logo">
-          <span>Copyright Tortoiseshell Optics</span>
-        </footer>
-
       </div>
-
+      <div class="bannerwide">
+        <div class="tagline">
+          <h1>Don't just look, See.</h1>
+        </div>
+      </div>
     </div>
 
-  </body>
+    <div class="offerscontainer">
+      <div class="offers">
+        <div class="offer1">
+          <p><img src="./resources/images/paper-icon.png" alt="Paper Icon"></p>
+          <p>Comprehensive Exams</p>
+        </div>
+        <div class="offer2">
+          <p><img src="./resources/images/ruler-icon.png" alt="Ruler Icon"></p>
+          <p>Custom Fittings</p>
+        </div>
+        <div class="offer3">
+          <p><img src="./resources/images/truck-icon.png" alt="Truck Icon"></p>
+          <p>Fast Delivery</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="aboutcontainer">
+      <div class="about">
+        <div class="ab1">
+          <div class="abtitle">
+            <h2>Philosophy</h2>
+          </div>
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+        </div>
+        <div class="ab2">
+          <div class="abtitle">
+            <h2>Appointments</h2>
+          </div>
+          <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footercontainer">
+      <footer>
+          <img src="./resources/images/logo-black.png" alt="Tortoiseshell Optics Logo">
+          <span>Copyright Tortoiseshell Optics</span>
+      </footer>
+    </div>
+
+
+  </div>
+
+</body>
+
 </html>
