--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics logo">
           <span>Tortoiseshell Optics</span>
         </div>
+        <div class="menu">
+          <span>Menu</span>
+        </div>
         <div class="nav">
           <nav>
             <span>Services</span>
@@ -36,15 +39,21 @@
       <div class="offers">
         <div class="offer1">
           <p><img src="./resources/images/paper-icon.png" alt="Paper Icon"></p>
-          <p>Comprehensive Exams</p>
+          <div class="offertext">
+            <p>Comprehensive Exams</p>
+          </div>
         </div>
         <div class="offer2">
           <p><img src="./resources/images/ruler-icon.png" alt="Ruler Icon"></p>
-          <p>Custom Fittings</p>
+          <div class="offertext">
+            <p>Custom Fittings</p>
+          </div>
         </div>
         <div class="offer3">
           <p><img src="./resources/images/truck-icon.png" alt="Truck Icon"></p>
-          <p>Fast Delivery</p>
+          <div class="offertext">
+            <p>Fast Delivery</p>
+          </div>
         </div>
       </div>
     </div>
